k2c_base/root/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Fri Jan  3 15:19:55 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [80:10717]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i ppp+ -j ACCEPT 
-A INPUT -p ah -j ACCEPT 
-A INPUT -p esp -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 500 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 4500 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 1701 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 2701 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2701 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 995 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 123 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 81 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 82 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 20 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222:2225 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5900:6000 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -p icmp -j ACCEPT 
-A FORWARD -i lo -j ACCEPT 
-A FORWARD -i ppp+ -j ACCEPT 
-A FORWARD -o ppp+ -j ACCEPT 
-A FORWARD -i en0 -j ACCEPT 
-A FORWARD -o en0 -j ACCEPT 
-A FORWARD -i eth0 -j ACCEPT 
-A FORWARD -o eth0 -j ACCEPT 
-A FORWARD -i eth2 -j ACCEPT 
-A FORWARD -o eth2 -j ACCEPT 
-A FORWARD -i eth3 -j ACCEPT 
-A FORWARD -o eth3 -j ACCEPT 
# -A FORWARD -s 172.168.1.0/24 -d 192.168.1.0/24 -i eth2 -j DROP 
# -A FORWARD -i eth2 -o eth0 -j DROP 
-A INPUT -s 172.168.1.0/24 -d 192.168.1.0/24 -j ACCEPT 
-A INPUT -d 172.168.1.0/24 -s 192.168.1.0/24 -j ACCEPT 
-A FORWARD -s 172.168.1.0/24 -d 192.168.1.0/24 -j ACCEPT 
-A FORWARD -d 172.168.1.0/24 -s 192.168.1.0/24 -j ACCEPT 

-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Fri Jan  3 15:19:55 2014
# Generated by iptables-save v1.4.7 on Fri Jan  3 15:19:55 2014
*nat
:PREROUTING ACCEPT [680:87895]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [91:6344]
-A PREROUTING -p tcp -m tcp --dport 2222:2225 -j DNAT --to-destination 192.168.1.12
-A PREROUTING -p tcp -m tcp --dport 20:21 -j DNAT --to-destination 192.168.1.12
-A PREROUTING -p tcp -m tcp --dport 35356 -j DNAT --to-destination 192.168.1.112
-A PREROUTING -p udp -m udp --dport 59682 -j DNAT --to-destination 192.168.1.112
-A POSTROUTING -o ppp+ -j MASQUERADE 
COMMIT
# Completed on Fri Jan  3 15:19:55 2014
